# wav2arkit_cpu

./: .gitignore  __init__.py  bsData_onnx.json  compare_raw_inference.py  export_utils.py  inference_streaming.py  postprocess.py  quantize_model.py  requirements.txt  session.py
android/SplatBench/: README.md  settings.gradle.kts
android/SplatBench/app/: build.gradle.kts  lam  proguard-rules.pro
android/SplatBench/app/src/main/: AndroidManifest.xml
android/SplatBench/app/src/main/cpp/: CMakeLists.txt  expression_postprocess.cpp  expression_postprocess.h  jni_bridge.cpp
android/SplatBench/app/src/main/res/layout/: activity_main.xml
android/SplatBench/app/src/main/res/values/: strings.xml  themes.xml
avatar_registry/: __init__.py  avatar_pack.py  bake_android.py  build_avatar.py  fbx_parser.py  gaussian_splat.py  gl_render.py  glb_loader.py  landmark_align.py  mouth_retarget.py  render_avatar.py  verify_pack.py  warp.py
avatar_registry/lam3d_avatar/barbara/arkitWithBSData/: bsData.json
avatar_registry/lam3d_avatar/second/arkitWithBSData/: bsData.json  offset.ply  skin.glb  vertex_order.json
avatar_registry/lam3d_avatar/status/arkitWithBSData/: bsData.json
avatar_registry/lam3d_avatar/third/arkitWithBSData/: bsData.json  offset.ply  skin.glb  vertex_order.json
avatar_registry/lam3d_avatar/vfhq_case1/arkitWithBSData/: bsData.json
avatar_registry/packs/barbara/: meta.json  neutral_2d.npy  triangles.npy
scripts/: smoke_test_spl2_onnx.py
scripts/cpp_parity/: cpp_postprocess_parity.py  parity_main.cpp
(+34 files in other folders)
